maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: type mismatch;
 found   : Array[Int]
 required: Int
  setIndication(foundBaggle(true),foundBaggle(false),0)
                           ^JediEscaper:12: error: type mismatch;
 found   : Array[Int]
 required: Int
  setIndication(foundBaggle(true),foundBaggle(false),0)
                                             ^JediEscaper:52: error: type mismatch;
 found   : Int
 required: Array[Int]
  	return bx
               ^JediEscaper:54: error: type mismatch;
 found   : Int
 required: Array[Int]
  	return by
               ^